[tool.poetry]
name = "corpusmaker"
version = "0.1.0"
description = "Input full text of stories, output JSONL for fine-tuning AI models"
authors = ["Pat Smith <pat.a.smith.dev@gmail.com>"]
license = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.1.1"
black = "^24.3.0"
mypy = "^1.9.0"
sqlmodel = "^0.0.16"
sqlalchemy = {extras = ["mypy"], version = "^2.0.28"}
poethepoet = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin"]


[tool.poe.tasks]
mypy = "mypy --strict ."
test = "pytest"
black = "black ."
all = [ "black", "test", "mypy" ] 